--- a/TSSP.web/TSSP.Web.csproj
+++ b/TSSP.web/TSSP.Web.csproj
@@ -90,6 +90,7 @@
   <ItemGroup>
     <Content Include="Global.asax" />
     <Content Include="Login.aspx" />
+    <Content Include="test.txt" />
     <Content Include="Web.config" />
     <Content Include="数据库创建.sql" />
   </ItemGroup>
