登录注册页的初始版本

--- a/TSSP.BLL/TSSP.BLL.csproj
+++ b/TSSP.BLL/TSSP.BLL.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Linq" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,11 +42,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="LoginService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Properties\test.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TSSP.DAL\TSSP.DAL.csproj">
+      <Project>{a684c872-80a1-47e1-bdd5-b14cb90029f7}</Project>
+      <Name>TSSP.DAL</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
