--- a/TSSP.web/Web.config
+++ b/TSSP.web/Web.config
@@ -1,9 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   有关如何配置 ASP.NET 应用程序的详细信息，请访问
   https://go.microsoft.com/fwlink/?LinkId=169433
 -->
 <configuration>
+  <connectionStrings>
+    <add name="XPU-TSSPConnectionString1" connectionString="Data Source=.;Initial Catalog=XPU-TSSP;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
