绑定学生数据

--- a/test/test.csproj
+++ b/test/test.csproj
@@ -7,12 +7,12 @@
     <ProductVersion>
     </ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{AAE40F0B-ECD0-43EF-B728-20A134CEE414}</ProjectGuid>
+    <ProjectGuid>{977E5B1C-75F0-42D4-A577-18959705836D}</ProjectGuid>
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TSSP.web</RootNamespace>
-    <AssemblyName>TSSP.web</AssemblyName>
+    <RootNamespace>test</RootNamespace>
+    <AssemblyName>test</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress />
@@ -44,13 +44,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Net.Http.Formatting, Version=5.2.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.7\lib\net45\System.Net.Http.Formatting.dll</HintPath>
-    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -60,12 +53,6 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Web.Extensions" />
-    <Reference Include="System.Web.Http, Version=5.2.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.2.7\lib\net45\System.Web.Http.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Web.Http.WebHost, Version=5.2.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.AspNet.WebApi.WebHost.5.2.7\lib\net45\System.Web.Http.WebHost.dll</HintPath>
-    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
@@ -101,102 +88,19 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Home\CompanyRegister.aspx" />
     <Content Include="Global.asax" />
-    <Content Include="Views\Home\Login.aspx" />
-    <Content Include="Views\Home\Register.aspx" />
-    <Content Include="static\css\login.css" />
-    <Content Include="static\easyui\datagrid-scrollview.js" />
-    <Content Include="static\easyui\easyui-lang-zh_CN.js" />
-    <Content Include="static\easyui\easyui.css" />
-    <Content Include="static\easyui\images\accordion_arrows.png" />
-    <Content Include="static\easyui\images\blank.gif" />
-    <Content Include="static\easyui\images\calendar_arrows.png" />
-    <Content Include="static\easyui\images\combo_arrow.png" />
-    <Content Include="static\easyui\images\datagrid_icons.png" />
-    <Content Include="static\easyui\images\datebox_arrow.png" />
-    <Content Include="static\easyui\images\datebox_arrowf.png" />
-    <Content Include="static\easyui\images\layout_arrows.png" />
-    <Content Include="static\easyui\images\linkbutton_bg.png" />
-    <Content Include="static\easyui\images\loading.gif" />
-    <Content Include="static\easyui\images\menu_arrows.png" />
-    <Content Include="static\easyui\images\messager_icons.png" />
-    <Content Include="static\easyui\images\pagination_icons.png" />
-    <Content Include="static\easyui\images\panel_tools.png" />
-    <Content Include="static\easyui\images\passwordbox_close.png" />
-    <Content Include="static\easyui\images\passwordbox_open.png" />
-    <Content Include="static\easyui\images\searchbox_button.png" />
-    <Content Include="static\easyui\images\slider_handle.png" />
-    <Content Include="static\easyui\images\spinner_arrows.png" />
-    <Content Include="static\easyui\images\tabs_icons.png" />
-    <Content Include="static\easyui\images\tree_icons.png" />
-    <Content Include="static\easyui\images\validatebox_warning.png" />
-    <Content Include="static\easyui\jquery.easyui.min.js" />
-    <Content Include="static\img\2.jpg" />
-    <Content Include="static\img\in_top_bj.png" />
-    <Content Include="static\img\in_top_bj1.jpg" />
-    <Content Include="static\img\log.gif" />
-    <Content Include="static\img\log.png" />
-    <Content Include="static\img\login-tit.png" />
-    <Content Include="static\img\login.png" />
-    <Content Include="static\img\nav_gv.png" />
-    <Content Include="static\img\no.png" />
-    <Content Include="static\img\noimage.jpg" />
-    <Content Include="static\img\radiono.png" />
-    <Content Include="static\img\radioyes.png" />
-    <Content Include="static\img\yes.png" />
-    <Content Include="static\js\myTeXiao.js" />
-    <Content Include="static\js\verificationNumbers.js" />
-    <Content Include="static\lib\jquery\1.9.1\jquery.js" />
-    <Content Include="static\lib\jquery\1.9.1\jquery.min.js" />
-    <Content Include="Views\Student\Index.aspx" />
     <Content Include="Web.config" />
-    <Content Include="Sql\数据库创建.sql" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="Views\Home\CompanyRegister.aspx.cs">
-      <DependentUpon>CompanyRegister.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Views\Home\CompanyRegister.aspx.designer.cs">
-      <DependentUpon>CompanyRegister.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Controllers\EnterpriseController.cs" />
-    <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\LoginController.cs" />
-    <Compile Include="Controllers\StudentController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Views\Home\Login.aspx.cs">
-      <DependentUpon>Login.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Views\Home\Login.aspx.designer.cs">
-      <DependentUpon>Login.aspx</DependentUpon>
-    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Views\Home\Register.aspx.cs">
-      <DependentUpon>Register.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Views\Home\Register.aspx.designer.cs">
-      <DependentUpon>Register.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="ValuesController1.cs" />
-    <Compile Include="Views\Student\Index.aspx.cs">
-      <DependentUpon>Index.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Views\Student\Index.aspx.designer.cs">
-      <DependentUpon>Index.aspx</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
     <Content Include="Views\web.config" />
-    <Content Include="Views\Enterprise\Index.cshtml" />
+    <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -206,16 +110,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\TSSP.BLL\TSSP.BLL.csproj">
-      <Project>{f27a706c-a921-47b5-adbd-34f43ee23dca}</Project>
-      <Name>TSSP.BLL</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\TSSP.DAL\TSSP.DAL.csproj">
-      <Project>{a684c872-80a1-47e1-bdd5-b14cb90029f7}</Project>
-      <Name>TSSP.DAL</Name>
-    </ProjectReference>
+    <Folder Include="Controllers\" />
+    <Folder Include="Models\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
@@ -230,9 +126,9 @@
         <WebProjectProperties>
           <UseIIS>True</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>3928</DevelopmentServerPort>
+          <DevelopmentServerPort>39842</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:3928/</IISUrl>
+          <IISUrl>http://localhost:39842/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
