--- a/test/Web.config
+++ b/test/Web.config
@@ -4,9 +4,6 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
 -->
 <configuration>
-  <connectionStrings>
-    <add name="XPU-TSSPConnectionString1" connectionString="Data Source=.;Initial Catalog=XPU-TSSP;Integrated Security=True" providerName="System.Data.SqlClient" />
-  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -30,12 +27,7 @@
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
-  <handlers>
-      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
-      <remove name="OPTIONSVerbHandler" />
-      <remove name="TRACEVerbHandler" />
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers></system.webServer>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
