--- a/TSSP.web/Web.config
+++ b/TSSP.web/Web.config
@@ -16,7 +16,8 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
-    <httpRuntime targetFramework="4.7.2" />
+	  <!--上传长度问题-->
+	  <httpRuntime targetFramework="4.7.2" maxRequestLength="1048576" executionTimeout="3600" />
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
