--- a/TSSP.BLL/TSSP.BLL.csproj
+++ b/TSSP.BLL/TSSP.BLL.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CompanyProfileService.cs" />
     <Compile Include="EnterpriseService.cs" />
     <Compile Include="LoginService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
