修改了数据库连接方式为远程方式 方便组员书写代码公司介绍模块完成

--- a/TSSP.DAL/app.config
+++ b/TSSP.DAL/app.config
@@ -6,5 +6,8 @@
         <add name="TSSP.DAL.Properties.Settings.XPU_TSSPConnectionString"
             connectionString="Data Source=.;Initial Catalog=XPU-TSSP;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="TSSP.DAL.Properties.Settings.XPU_TSSPConnectionString1"
+            connectionString="Data Source=xpu.tssp;Initial Catalog=XPU-TSSP;User ID=sa;Password=123456"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
