--- a/TSSP.web/TSSP.Web.csproj
+++ b/TSSP.web/TSSP.Web.csproj
@@ -101,6 +101,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="pages\UpdateCompanyProfile.aspx" />
+    <Content Include="pages\UpdateEnterprise.aspx" />
+    <Content Include="pages\UpdateJobPosting.aspx" />
     <Content Include="static\Assets\css\reset.css" />
     <Content Include="static\Assets\css\responsive.css" />
     <Content Include="static\Assets\css\thems.css" />
@@ -138,6 +141,7 @@
     <Content Include="static\Assets\js\main.js" />
     <Content Include="static\Assets\upload\banner.jpg" />
     <Content Include="static\Assets\upload\banner_a.jpg" />
+    <Content Include="static\Assets\upload\banner_a.png" />
     <Content Include="static\Assets\upload\map.jpg" />
     <Content Include="static\Assets\upload\pic1.jpg" />
     <Content Include="static\Assets\upload\pic2.jpg" />
@@ -145,9 +149,11 @@
     <Content Include="static\Assets\upload\pic4.jpg" />
     <Content Include="static\Assets\upload\pic5.jpg" />
     <Content Include="static\Assets\upload\pic6.png" />
+    <Content Include="static\img\banner_a.png" />
+    <Content Include="Views\Enterprise\CompanyProfile.aspx" />
     <Content Include="Views\Enterprise\Index.aspx" />
     <Content Include="Global.asax" />
-    <Content Include="UpdateEnterprise.aspx" />
+    <Content Include="Views\Enterprise\JobPostings.aspx" />
     <Content Include="Views\Home\Login.aspx" />
     <Content Include="Views\Home\Register.aspx" />
     <Content Include="static\css\login.css" />
@@ -202,6 +208,34 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\ImageController.cs" />
+    <Compile Include="pages\UpdateCompanyProfile.aspx.cs">
+      <DependentUpon>UpdateCompanyProfile.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="pages\UpdateCompanyProfile.aspx.designer.cs">
+      <DependentUpon>UpdateCompanyProfile.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="pages\UpdateEnterprise.aspx.cs">
+      <DependentUpon>UpdateEnterprise.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="pages\UpdateEnterprise.aspx.designer.cs">
+      <DependentUpon>UpdateEnterprise.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="pages\UpdateJobPosting.aspx.cs">
+      <DependentUpon>UpdateJobPosting.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="pages\UpdateJobPosting.aspx.designer.cs">
+      <DependentUpon>UpdateJobPosting.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Enterprise\CompanyProfile.aspx.cs">
+      <DependentUpon>CompanyProfile.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Enterprise\CompanyProfile.aspx.designer.cs">
+      <DependentUpon>CompanyProfile.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Views\Enterprise\Index.aspx.cs">
       <DependentUpon>Index.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -216,12 +250,12 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="UpdateEnterprise.aspx.cs">
-      <DependentUpon>UpdateEnterprise.aspx</DependentUpon>
+    <Compile Include="Views\Enterprise\JobPostings.aspx.cs">
+      <DependentUpon>JobPostings.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="UpdateEnterprise.aspx.designer.cs">
-      <DependentUpon>UpdateEnterprise.aspx</DependentUpon>
+    <Compile Include="Views\Enterprise\JobPostings.aspx.designer.cs">
+      <DependentUpon>JobPostings.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\Home\Login.aspx.cs">
       <DependentUpon>Login.aspx</DependentUpon>
@@ -265,6 +299,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Properties\PublishProfiles\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TSSP.BLL\TSSP.BLL.csproj">
