--- a/TSSP.web/TSSP.Web.csproj
+++ b/TSSP.web/TSSP.Web.csproj
@@ -101,6 +101,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="pages\UpdateEnterprise.aspx" />
     <Content Include="static\Assets\css\reset.css" />
     <Content Include="static\Assets\css\responsive.css" />
     <Content Include="static\Assets\css\thems.css" />
@@ -145,9 +146,9 @@
     <Content Include="static\Assets\upload\pic4.jpg" />
     <Content Include="static\Assets\upload\pic5.jpg" />
     <Content Include="static\Assets\upload\pic6.png" />
+    <Content Include="Views\Enterprise\CompanyProfile.aspx" />
     <Content Include="Views\Enterprise\Index.aspx" />
     <Content Include="Global.asax" />
-    <Content Include="UpdateEnterprise.aspx" />
     <Content Include="Views\Home\Login.aspx" />
     <Content Include="Views\Home\Register.aspx" />
     <Content Include="static\css\login.css" />
@@ -202,6 +203,20 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\ImageController.cs" />
+    <Compile Include="pages\UpdateEnterprise.aspx.cs">
+      <DependentUpon>UpdateEnterprise.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="pages\UpdateEnterprise.aspx.designer.cs">
+      <DependentUpon>UpdateEnterprise.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Enterprise\CompanyProfile.aspx.cs">
+      <DependentUpon>CompanyProfile.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Enterprise\CompanyProfile.aspx.designer.cs">
+      <DependentUpon>CompanyProfile.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Views\Enterprise\Index.aspx.cs">
       <DependentUpon>Index.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -215,13 +230,6 @@
     <Compile Include="Controllers\StudentController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
-    </Compile>
-    <Compile Include="UpdateEnterprise.aspx.cs">
-      <DependentUpon>UpdateEnterprise.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="UpdateEnterprise.aspx.designer.cs">
-      <DependentUpon>UpdateEnterprise.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\Home\Login.aspx.cs">
       <DependentUpon>Login.aspx</DependentUpon>
