--- a/TSSP.web/Web.config
+++ b/TSSP.web/Web.config
@@ -5,11 +5,16 @@
 -->
 <configuration>
   <connectionStrings>
-    <add name="XPU-TSSPConnectionString1" connectionString="Data Source=xpu.tssp;Initial Catalog=XPU-TSSP;User ID=sa;Password=123456" providerName="System.Data.SqlClient"/>
+    <add name="XPU-TSSPConnectionString1" connectionString="Data Source=./SQLROOT;Initial Catalog=XPU-TSSP;User ID=sa;Password=123456"
+      providerName="System.Data.SqlClient" />
+    <add name="XPU-TSSPConnectionString" connectionString="Data Source=DESKTOP-F1MCUJ2\SQLROOT;Initial Catalog=XPU-TSSP;Persist Security Info=True;User ID=sa;Password=123456"
+      providerName="System.Data.SqlClient" />
+    <add name="XPU-TSSPConnectionString2" connectionString="Data Source=DESKTOP-F1MCUJ2\SQLROOT;Initial Catalog=XPU-TSSP;User ID=sa;Password=123456"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
-    <add key="webpages:Enabled" value="false" />
+    <add key="webpages:Enabled" value="false"/>
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
