测试用的session注释掉了

--- a/TSSP.web/TSSP.Web.csproj
+++ b/TSSP.web/TSSP.Web.csproj
@@ -298,6 +298,10 @@
     <Content Include="static\stuStatic\static\img\us_img7.png" />
     <Content Include="static\stuStatic\static\img\us_img8.png" />
     <Content Include="static\stuStatic\static\js\firm.js" />
+    <Content Include="static\upload\1.jpg" />
+    <Content Include="static\upload\2 .jpg" />
+    <Content Include="static\upload\2.txt" />
+    <Content Include="static\upload\1.txt" />
     <Content Include="Views\Enterprise\CompanyProfile.aspx" />
     <Content Include="Views\Enterprise\Index.aspx" />
     <Content Include="Global.asax" />
