--- a/TSSP.web/Web.config
+++ b/TSSP.web/Web.config
@@ -5,7 +5,7 @@
 -->
 <configuration>
   <connectionStrings>
-    <add name="XPU-TSSPConnectionString1" connectionString="Data Source=./SQLROOT;Initial Catalog=XPU-TSSP;User ID=sa;Password=123456"
+    <add name="XPU-TSSPConnectionString1" connectionString="Data Source=xpu.tssp;Initial Catalog=XPU-TSSP;User ID=sa;Password=123456"
       providerName="System.Data.SqlClient" />
     <add name="XPU-TSSPConnectionString" connectionString="Data Source=DESKTOP-F1MCUJ2\SQLROOT;Initial Catalog=XPU-TSSP;Persist Security Info=True;User ID=sa;Password=123456"
       providerName="System.Data.SqlClient" />
@@ -46,6 +46,8 @@
           assembly="System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
       </controls>
     </pages>
+	  <!--session过期时间30min-->
+	  <sessionState mode="InProc" timeout="30"/>
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
