--- a/TSSP.BLL/TSSP.BLL.csproj
+++ b/TSSP.BLL/TSSP.BLL.csproj
@@ -45,6 +45,7 @@
     <Compile Include="CompanyProfileService.cs" />
     <Compile Include="EnterpriseService.cs" />
     <Compile Include="LoginService.cs" />
+    <Compile Include="ProjectSubmissionService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StudentService.cs" />
   </ItemGroup>
